# quicksilver-browser-extension

./: .gitignore  Cargo.toml  README.md  model.cbor  offscreen.js  popup.html  popup.js  privacy_policy.md  pyproject.toml
chrome/: constants.js  storage.js
chromium/: manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  processor.js  storage.js
examples/: fakeprint.py  profile.rs  resample.rs
model/v0-2026-02-05/: model.pkl
model/v0.2-2026-03-31/: model.pkl
model/v1-2026-03-17/: model.cbor  model.pkl
model/v1.0-2026-03-31/: README.md
model/v1.2-2026-03-31/: README.md
scripts/: build.sh  create-chrome-zip.sh  create-chromium-zip.sh  script-generate-fakeprints-multiprocessing.py
src/: lib.rs
src/core/: mod.rs
src/core/fakeprint/: curve.rs  mod.rs  stft.rs
src/python/: mod.rs
src/web/: mod.rs  model.rs
tests/assets/: aifp.json
tests/keys/: fp.json  stft2.json
tests/scripts/: core.sh  profile.sh  pybindings.py  python.sh  resample.sh  web.sh
