[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fakepyrint"
version = "0.1.0"
description = "Python bindings for computing fakeprints from audio data"
requires-python = ">=3.9"
dependencies = [
    "cbor2>=5.8.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.6.1",
    "torchaudio>=2.8.0",
    "torchcodec>=0.9.1",
    "tqdm>=4.67.3",
]

[tool.maturin]
features = ["python"]
module-name = "fakepyrint"
release = true
